# project2_Petrov_Daniil_M25-555

./: .gitignore  README.md  demo.cast  pyproject.toml
data/: users.json
src/primitive_db/: constants.py  core.py  decorators.py  engine.py  main.py  parser.py  utils.py
