[tool.poetry]
name = "project2-petrov-daniil-m25-555"
version = "0.1.0"
description = "Primitive Database Console Application"
authors = ["Petrov Daniil <petr.dan.02@yandex.ru>"]
packages = [
    { include = "src" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"
prettytable = "^3.17.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.11"

[tool.poetry.scripts]
database = "src.primitive_db.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

